--- a/SpringMVC/src/main/webapp/resources/css/main.css
+++ b/SpringMVC/src/main/webapp/resources/css/main.css
@@ -1,4 +1,3 @@
-@charset "ISO-8859-1";
 @import url("https://fonts.googleapis.com/css2?family=Lato&family=Patua+One&display=swap");
 * {
   padding: 0;
@@ -14,15 +13,15 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background-image: url("../resources/images/bg-welcome.jpg");
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: url("/assets/bg-welcome.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -33,41 +32,24 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 30vh;
   width: 70%;
-  -webkit-clip-path: polygon(
-    20% 0%,
-    80% 0%,
-    100% 20%,
-    100% 80%,
-    80% 100%,
-    20% 100%,
-    0% 80%,
-    0% 20%
-  );
-  clip-path: polygon(
-    20% 0%,
-    80% 0%,
-    100% 20%,
-    100% 80%,
-    80% 100%,
-    20% 100%,
-    0% 80%,
-    0% 20%
-  );
+  -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+          clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
   background-color: #1f271b;
   color: #f3fcf0;
 }
 
 .jumbotron h1 {
+  text-transform: uppercase;
   font-family: "Patua One", cursive;
   font-size: 4.8rem;
 }
@@ -80,14 +62,12 @@
 nav {
   width: 100%;
   height: 4rem;
-  position: fixed;
-  top: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 nav ul {
@@ -96,12 +76,12 @@ nav ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   list-style: none;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 nav ul li {
@@ -112,14 +92,104 @@ nav ul li a {
   font-size: 3.2rem;
   text-transform: uppercase;
   text-decoration: none;
-  color: white;
+  color: #1f271b;
+}
+
+.products-view {
+  padding: 1.5rem;
 }
 
 .grid-products {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (3) [1fr];
-  grid-template-columns: repeat(1fr, 3);
+/*   -ms-grid-columns: (1fr)[4]; */
+      grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 300px;
+  grid-gap: 1rem;
+}
+
+.grid-products .product {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 40% 10% 30% 20%;
+      grid-template-rows: 40% 10% 30% 20%;
+  -ms-grid-columns: 100%;
+      grid-template-columns: 100%;
+  border: 1px solid #ecf0ea;
+  border-radius: 4px;
+  padding: 0.2rem;
+}
+
+.grid-products .product .product-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.grid-products .product .product-img img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.grid-products .product .title {
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.grid-products .product .title h3 {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  font-family: "Lato", sans-serif;
+  font-size: 1.8rem;
+  letter-spacing: 1px;
+}
+
+.grid-products .product .description {
+  padding: 1rem;
+}
+
+.grid-products .product .description p {
+  font-family: "Lato", sans-serif;
+  font-size: 1.2rem;
+  text-align: justify;
+}
+
+.grid-products .product .description p ~ p {
+  font-size: 2.4rem;
+  font-weight: bold;
+}
+
+.grid-products .product .description p span {
+  color: #809d71;
+}
+
+.grid-products .product .order {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.grid-products .product .order a {
+  background-color: #ffd23f;
+  padding: 0.5rem 1rem;
+  font-size: 2.5rem;
+  border-radius: 4px;
+  text-decoration: none;
+  color: #1f271b;
 }
 /*# sourceMappingURL=main.css.map */
-
