--- a/SpringMVC/src/main/webapp/resources/css/main.css
+++ b/SpringMVC/src/main/webapp/resources/css/main.css
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato&family=Patua+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@100;200;400;500;600&display=swap");
 * {
   padding: 0;
   margin: 0;
   font-size: 10px;
+  font-family: 'Exo 2', sans-serif;
 }
 
 .container {
@@ -21,7 +22,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: url("/assets/bg-welcome.jpg");
+  background-image: url("../resources/images/bg-welcome.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -102,9 +103,9 @@ nav ul li a {
 .grid-products {
   display: -ms-grid;
   display: grid;
-/*   -ms-grid-columns: (1fr)[4]; */
+  -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 300px;
+  grid-auto-rows: 375px;
   grid-gap: 1rem;
 }
 
@@ -191,5 +192,136 @@ nav ul li a {
   border-radius: 4px;
   text-decoration: none;
   color: #1f271b;
+}
+
+.view {
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.view .form-container {
+  width: 50%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 90px 250px 60px;
+      grid-template-rows: 90px 250px 60px;
+  border-radius: 15px;
+}
+
+.view .form-container .form-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  background-color: #1f271b;
+  border-radius: 15px 15px 0 0;
+}
+
+.view .form-container .form-header h1 {
+  color: #f3fcf0;
+  text-transform: uppercase;
+  font-size: 4.8rem;
+  letter-spacing: 1px;
+}
+
+.view .form-container .form-body {
+  width: 100%;
+  background-color: #f3fcf0;
+  border-radius: 0 0 15px 15px;
+}
+
+.view .form-container .form-body form {
+  width: 100%;
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 35% 35% 30%;
+      grid-template-rows: 35% 35% 30%;
+}
+
+.view .form-container .form-body form .form-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.view .form-container .form-body form .form-group input {
+  font-size: 3.8rem;
+  border-radius: 15px;
+  border: 1px solid black;
+  padding: .1em .5em;
+  outline: none;
+}
+
+.view .form-container .form-body form input[type=submit] {
+  background-color: #1f271b;
+  color: #f3fcf0;
+  border: none;
+  border-radius: 0 0 15px 15px;
+  outline: none;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 2.4rem;
+  letter-spacing: 1px;
+  cursor: pointer;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+}
+
+.view .form-container .form-body form input[type=submit]:hover {
+  background-color: #4f6345;
+}
+
+.view .form-container .form-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.view .form-container .form-footer a {
+  color: #1f271b;
+  font-size: 1.4rem;
+  text-decoration: none;
+}
+
+.view::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #ffd23f;
+  -webkit-clip-path: polygon(0 0, 0% 100%, 100% 100%);
+          clip-path: polygon(0 0, 0% 100%, 100% 100%);
+  z-index: -1;
 }
 /*# sourceMappingURL=main.css.map */
