--- a/SpringMVC/src/main/webapp/resources/css/main.css
+++ b/SpringMVC/src/main/webapp/resources/css/main.css
@@ -14,7 +14,7 @@
 .fullscreen-main {
   width: 100%;
   height: 100vh;
-  background-image: url("/assets/bg-welcome.jpg");
+  background-image: url("../img/bg-welcome.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
